--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index of Building</title>
+    <title>Building Pain 1.0</title>
     <link rel="stylesheet" href="css/BricksPain.css">
 </head>
 <body>
-    <h2>Index of Building</h2>
-    <div>Go to <a href="BuildingPain.html">Building Pain</a></div>
-    <div>Go to <a href="GroundFloor.html">Ground Floor</a></div>
+    <header><h2>Enter Through Here:</h2></header>
+    <div>
+        <p><a href="GroundFloor.html">Ground Floor</a></p>
+        <p><a href="">First Floor</a></p>
+        <p><a href="">Second Floor</a></p>
+        <p><a href="">Third Floor</a></p>
+        <p><a href="">Fourth Floor</a></p>
+        
+    </div>
+    <footer>&copy;All copyrights reserved,2026</footer>
 </body>
 </html>
